# Go-Insure

./: .env  README.md  index.js  main-contract.json  package-lock.json  package.json
backend/: .copier-answers.yml
backend/contract/: .copier-answers.yml  README.md  build.py  deploy.py  go_insure.py  pyproject.toml  weather_feeds.json
backend/contract/artifacts/: application.json  approval.teal  contract.json
backend/default_app/: build.py  default_app.py  demo.py  deploy.py  utils.py  weather_feeds.json
backend/default_app/artifacts/: application.json  approval.teal  contract.json
frontend/: .env  check.js  goInsure.ts  main-contract.json  next.config.js  package-lock.json  package.json  request.js
frontend/app_client/: application.json  go_insure_client.ts  insurancedapp_client.ts  krowdfund_client.ts
frontend/components/: ConnectMenu.jsx  Navbar.jsx
frontend/contracts/artifacts/: application.json  approval.teal
frontend/helpers/: index.js  shortenAddress.js
frontend/pages/: _app.tsx  index.tsx
